# mcp-signal

./: .gitignore  CLAUDE.md  LICENSE  README.md  SECURITY.md  pyproject.toml  server.py
.claude/commands/: release.md
.claude/rules/: mcp-tool-descriptions.md
.github/: dependabot.yml
src/mcp_signal/: config.py  link_manager.py  main.py  reader.py  server.py  signal_cli.py
tests/: conftest.py  test_config.py  test_decrypt_attachment.py  test_link_manager.py  test_reader.py  test_signal_cli.py  test_smoke.py
