[project]
name = "mcp-signal"
version = "0.2.0"
description = "Local Signal MCP server: read via Signal Desktop, send via signal-cli"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [
  { name = "Chris Lloyd-Jones" }
]
dependencies = [
    "cryptography>=44.0.0",
    "fastmcp==3.2.4",
    "signal-export==3.8.3",
]

[project.scripts]
signal-mcp = "mcp_signal.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[dependency-groups]
dev = [
    "pytest==9.0.3",
    "ruff==0.15.12",
]
